--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
 
-        <h1>yes</h1>
-        <p>hi</p>
+        <h1>toby chen</h1>
+        <p>is an idiot.</p>
 
     </body>
 </html>
