--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1>toby chen</h1>
         <p>is an idiot.</p>
 
+        <img src="picture.jpg" alt="tobychen.png">
+
     </body>
 </html>
