--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
 
-        <h1>toby chen</h1>
-        <p>is an idiot.</p>
+        <h1>toby</h1>
+        <p>chen.</p>
 
-        <img src="picture.jpg" alt="tobychen.png">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/PNG_transparency_demonstration_1.png" alt="Example">
 
     </body>
 </html>
