--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
 
         <h1>toby</h1>
-        <p>chen.</p>
+        <p>chen</p>
 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/PNG_transparency_demonstration_1.png" alt="Example">
+        <img src="picture.png" alt="tobychen">
 
     </body>
 </html>
