--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>Page Title</title>
+        <link rel="stylesheet" href="style.css">
+        <title>Toby Chen</title>
     </head>
     <body>
 
-        <h1>toby</h1>
-        <p>chen</p>
+        <h1>Toby Chen</h1>
 
         <img src="picture.png" alt="tobychen">
 
