--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
         <h1>Toby Chen</h1>
         <hr>
-        <img src="toby1.jpg" alt="toby1">
         <h3>
             Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
             who aims to captivate his learning through subjects ranged from science and arts.
         </h3>
-        <img src="toby2.jpg" alt="toby2">
+        <img src="toby2.png" alt="toby2">
 
     </body>
 </html>
+
