--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
             who aims to captivate his learning through subjects ranged from science and arts.
         </h3>
-        <img src="toby2.png" alt="toby2">
+        <img id = "toby1" src="toby1.jpg" alt="toby1">
 
     </body>
 </html>
-
