--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
             who aims to captivate his learning through subjects ranged from science and arts.
         </h3>
-        <img id="toby1" src="toby1.jpg" alt="toby1">
+        <img id = "toby1" src="toby1.jpg" alt="toby1" width="1" height="1">
 
     </body>
 </html>
-
 
