--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         </h3>
         <img id = "toby1" src="toby1.png" alt="toby1" width="2" height="1">
 
+        <p> 
+            Toby Chen's passion for academic engagement has seen him present in artistic perfomances,
+            and community leadership in both Melbourne and regional Victoria. Recent highlights include
+            10k trophy milestone in Clash Royale, and 3 star restaurant certificate in Roblox Restaurant
+            Tycoon 3.
+        </p>
+        <p>
+            A passionate advocate of new education, Toby has collaborated with technical specialists such as
+            Jude Jia and Smith Mitchell to achieve triumphs in Clash Royale tournaments, featuring a number
+            of impressive achievements and demonstrating true enthusiasm.
+        </p>
+        
     </body>
 </html>
-
-
-
