--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
             who aims to captivate his learning through subjects ranged from science and arts.
         </h3>
-        <img id = "toby1" src="toby1.png" alt="toby1" width="1" height="3">
+        <img id = "toby1" src="toby1.png" alt="toby1">
 
         <p> 
             Toby Chen's passion for academic engagement has seen him present in artistic perfomances,
@@ -29,6 +29,7 @@
         
     </body>
 </html>
+
 
 
 
