--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>Toby Chen</title>
-</head>
-<body>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>Toby Chen</title>
+    </head>
+    <body>
 
-    <h1>Toby Chen</h1>
-    <hr>
+        <h1>Toby Chen</h1>
+        <hr>
+        <h3>
+            Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
+            who aims to captivate his learning through subjects ranged from science and arts.
+        </h3>
+        <img id = "toby1" src="toby1.png" alt="toby1" width="2" height="1">
 
-    <!-- Start of layout block -->
-    <div class="profile-container">
-        <img id="toby1" src="toby1.png" alt="Toby Chen portrait">
-
-        <div class="text-block">
-            <p class="intro">
-                Toby Chen is an Australian student based in Melbourne. He is a versatile and dynamic learner
-                who aims to captivate his learning through subjects ranged from science and arts.
-            </p>
-
-            <p> 
-                Toby Chen's passion for academic engagement has seen him present in artistic performances,
-                and community leadership in both Melbourne and regional Victoria. Recent highlights include
-                a 10k trophy milestone in Clash Royale, and a 3-star restaurant certificate in Roblox Restaurant
-                Tycoon 3.
-            </p>
-
-            <p>
-                A passionate advocate of new education, Toby has collaborated with technical specialists such as
-                Jude Jia and Smith Mitchell to achieve triumphs in Clash Royale tournaments, featuring a number
-                of impressive achievements and demonstrating true enthusiasm.
-            </p>
-        </div>
-    </div>
-    <!-- End of layout block -->
-
-</body>
+        <p> 
+            Toby Chen's passion for academic engagement has seen him present in artistic perfomances,
+            and community leadership in both Melbourne and regional Victoria. Recent highlights include
+            10k trophy milestone in Clash Royale, and 3 star restaurant certificate in Roblox Restaurant
+            Tycoon 3.
+        </p>
+        <p>
+            A passionate advocate of new education, Toby has collaborated with technical specialists such as
+            Jude Jia and Smith Mitchell to achieve triumphs in Clash Royale tournaments, featuring a number
+            of impressive achievements and demonstrating true enthusiasm.
+        </p>
+        
+    </body>
 </html>
+
 
 
 
