--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>   
+        <p>
+            lachie foster
+        </p>
     </body>
 </html>
+
 
 
 
