--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             lachie foster
         </p>
 
-        <img src="lachie1.png">
+        <img src="lachie1.png" alt="lachie foster">
     </body>
 </html>
+
 
 
 
