--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <body>   
         <p>
-            lachie foster
+            fachie loster
         </p>
     </body>
 </html>
+
 
 
 
