--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>   
-        <p>
-            fachie loster
-        </p>
+        <h1> luke whittington</h1>
+        <br>
+        <img src="luke1.png" alt="luke">
+        <p>Luke whittington is a chad</p>
     </body>
 </html>
+
 
 
 
