--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         <br>
         <img src="luke1.png" alt="luke">
         <p>Luke whittington is a chad</p>
+        <img src="lachie1.png"
     </body>
+    
 </html>
+
 
 
 
