--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>  
+        <p> good afternoon </p>
     </body>
     
 </html>
+
 
 
 
